# explaincmd

./: README.md  pyproject.toml
src/explaincmd/: __init__.py
