[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "explaincmd"
version = "0.1.0"
authors = [
  { name="Alex Ramalho", email="alexandre.ramalho.1998@gmail.com" },
]
description = "A CLI helper that succintly explains commands to help with memorization."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai",
]

[project.urls]
"Github" = "https://github.com/alramalho/explaincmd"

[project.scripts]
explaincmd = "explaincmd:main"

[tool.hatch.build.targets.wheel]
packages = ["src/explaincmd"]
